fixed function names

--- a/notebooks/service-assessments.ipynb
+++ b/notebooks/service-assessments.ipynb
@@ -23,20 +23,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e197f1b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#Incase we need it\n",
-    "\n",
-    "mongo_client = pymongo.MongoClient('mongodb://localhost:27017/')\n",
-    "content_store_db = mongo_client[\"content_store\"]\n",
-    "content_store_collection = content_store_db[\"content_items\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "18bb8ba4",
    "metadata": {},
    "outputs": [],
@@ -118,6 +104,11 @@
    "outputs": [],
    "source": [
     "def get_assessment_path_and_metadata(urllist):\n",
+    "    \"\"\"\n",
+    "    Scrape meta data from each page of\n",
+    "    https://www.gov.uk/service-standard-reports\n",
+    "    Should be 225 reports\n",
+    "    \"\"\"\n",
     "    assessments_dict= {}\n",
     "    for url in urllist:\n",
     "        page = requests.get(url)\n",
@@ -152,11 +143,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "c11b8f3d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "assert(df.shape[0] == 224)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "7bdbeb6f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Fix just one missing date\n",
+    "# Fix just one missing assessment date\n",
     "print(df[df['assessment_date'].isna()])\n",
     "df.iloc[75]['assessment_date'] = '12 September 2019'\n",
     "df['assessment_date'] = df['assessment_date'].map(\n",
@@ -209,7 +210,6 @@
     "        result = [result.rsplit('\\n')[1] for result in results]\n",
     "        result\n",
     "    except IndexError:\n",
-    "        print('missing newline')\n",
     "        result = None\n",
     "    # Occasionally we get two results, for prior assessments, we just want the most recent one\n",
     "    result = result[len(result)-1] if result else None\n",
@@ -231,8 +231,8 @@
     "    page = BeautifulSoup(request.content)\n",
     "    trs = page.find_all(\"tr\")\n",
     "    lines = [re.sub(r'[^\\w\\s]','',tr.text).lower().strip('\\n').split('\\n') for tr in trs]\n",
-    "    key = [x[0] for x in line]\n",
-    "    value = [x[1] for x in line]\n",
+    "    key = [x[0] for x in lines]\n",
+    "    value = [x[1] for x in lines]\n",
     "    summary_table = dict(zip(key,value))\n",
     "\n",
     "    return summary_table\n"
@@ -261,7 +261,6 @@
     "    'scraped_result'\n",
     "]].values[0].tolist() == ['pass']\n",
     "\n",
-    "\n",
     "assert df[df['path']=='/service-standard-reports/redundancy-payments-alpha-assessment'][[\n",
     "    'scraped_result'\n",
     "]].values[0].tolist() == ['met']\n",
@@ -275,24 +274,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ca6d205",
+   "id": "c3ef7d80",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Get missing meta data from summary table\n",
-    "df['summary_table'] = df['url'].map(summary_table_result)\n",
-    "df['st_result'] = df['summary_table'].map(lambda x: x.get('result'))\n",
-    "df['st_stage'] = df['summary_table'].map(lambda x: x.get('stage'))\n"
+    "df"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1c3723e9",
+   "id": "6ca6d205",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df[df['st_result'].notna() & df['assessment_outcome'].isna()]"
+    "# Get missing meta data from summary table\n",
+    "df['summary_table'] = df['url'].map(scrape_summary_table)\n",
+    "df['st_result'] = df['summary_table'].map(lambda x: x.get('result'))\n",
+    "df['st_stage'] = df['summary_table'].map(lambda x: x.get('stage'))\n"
    ]
   },
   {
@@ -307,7 +306,6 @@
     "    'st_result',\n",
     "    'st_stage'\n",
     "]].values[0].tolist() == ['met','beta']\n",
-    "\n",
     "\n",
     "assert df[df['path']=='/service-standard-reports/electronic-data-collection-alpha-assessment'][[\n",
     "    'st_result',\n",
@@ -328,9 +326,10 @@
    "outputs": [],
    "source": [
     "# Coalesce our API, scraped p and scraped table outcomes/stages\n",
+    "# Priority is API > Summary table > p\n",
     "df['stage'] =df['stage'].combine_first(df['st_stage'])\n",
-    "df['assessment_outcome'] = df['assessment_outcome'].combine_first(df2['scraped_result'])\n",
-    "df['assessment_outcome'] = df['assessment_outcome'].combine_first(df2['st_result'])"
+    "df['assessment_outcome'] = df['assessment_outcome'].combine_first(df['scraped_result'])\n",
+    "df['assessment_outcome'] = df['assessment_outcome'].combine_first(df['st_result'])"
    ]
   },
   {
@@ -340,7 +339,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Do the NaNs by hand some time\n",
+    "# Outcome description\n",
     "df.groupby('assessment_outcome',dropna=False).size()"
    ]
   },
@@ -351,7 +350,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Just mapping strings\n",
+    "# Map outcome/stage strings to proper thing\n",
     "stage_map = {\n",
     "'alpha': 'alpha',\n",
     "'alpha  reassessment':'alpha-reassessment',\n",
@@ -450,7 +449,7 @@
    "source": [
     "def extract_id_and_status(lines):\n",
     "    \"\"\"\n",
-    "    Extract id and status from raw text\n",
+    "    Extract id and status from raw text string\n",
     "    \"\"\"\n",
     "    data = {'met':[],'not-met':[]}\n",
     "    criteria = [int(re.search('\\d+',line).group()) for line in lines]\n",
@@ -479,18 +478,6 @@
     "#Unnest criteria dict\n",
     "df['met-criteria-from-p'] = df['criteria'].map(lambda x: x.get('met'))\n",
     "df['unmet-criteria-from-p'] = df['criteria'].map(lambda x: x.get('not-met'))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5db3b72",
-   "metadata": {
-    "scrolled": false
-   },
-   "outputs": [],
-   "source": [
-    "df[df['unmet-criteria-from-p'].str.len()>0]"
    ]
   },
   {
@@ -526,6 +513,9 @@
    "source": [
     "def find_met_criteria_in_table(url):\n",
     "    \"\"\"\n",
+    "    Extracts individual criteria and outcome from two types of table:\n",
+    "    3 column table as per https://www.gov.uk/service-standard-reports/new-secure-access-alpha-reassessment\n",
+    "    4 column table as per https://www.gov.uk/service-standard-reports/claim-for-crown-court-defence\n",
     "    \"\"\"\n",
     "    request = requests.get(url)\n",
     "    page = BeautifulSoup(request.content)\n",
@@ -533,7 +523,7 @@
     "    met_criteria_from_table = []\n",
     "    unmet_criteria_from_table = []\n",
     "    for x,tr in enumerate(trs):\n",
-    "        # 3 column table as per https://www.gov.uk/service-standard-reports/new-secure-access-alpha-reassessment\n",
+    "        # 3 column table\n",
     "        tds = tr.find_all('td')\n",
     "        if len(tds) ==3:    \n",
     "            for y,td in enumerate(tds):\n",
@@ -548,7 +538,7 @@
     "                            met_criteria_from_table.append(point_id)\n",
     "                        elif tds[y+2].string.lower() == 'not met':\n",
     "                            unmet_criteria_from_table.append(point_id)\n",
-    "        # 4 column table as per https://www.gov.uk/service-standard-reports/claim-for-crown-court-defence\n",
+    "        # 4 column table \n",
     "        elif len(tds)==4:\n",
     "            for y,td in enumerate(tds):\n",
     "                if td.string:\n",
@@ -594,6 +584,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Coalesce data scraped from table and from p\n",
     "# Table is more reliable than p\n",
     "df['met-criteria-from-table'] = df['met-criteria-from-table'].map(lambda x: np.nan if len(x)==0 else x)\n",
     "df['unmet-criteria-from-table'] = df['unmet-criteria-from-table'].map(lambda x: np.nan if len(x)==0 else x)\n",
@@ -601,27 +592,6 @@
     "df['met'] = df['all-met-criteria'].map(lambda x: list(set(map(int,x))))\n",
     "df['all-unmet-criteria'] = df['unmet-criteria-from-table'].combine_first(df['unmet-criteria-from-p'])\n",
     "df['not-met'] = df['all-unmet-criteria'].map(lambda x: list(set(map(int,x))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66941679",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# a few missing the breakdown\n",
-    "df[df['met'].str.len()<1].shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe3a56ad",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df[df['not-met'].str.len()>2]"
    ]
   },
   {
@@ -669,10 +639,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "39c6d347",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "72eb0b46",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Tidy for export\n",
     "export = df[['path',\n",
     "             'assessment_outcome',\n",
     "             'stage',\n",
@@ -762,6 +743,36 @@
    "outputs": [],
    "source": [
     "export.to_csv('assessment_crit_breakdown.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71ebb6ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary = export[['path','assessment_outcome','stage','assessment_date']].drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "211bdf2a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary.shape[0] == 224"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c89f6f89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "summary.to_csv('service-assessment-summary.csv')"
    ]
   }
  ],
